--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/EX3WEB.loader.js";
+      var loaderUrl = buildUrl + "/web3.loader.js";
       var config = {
-        dataUrl: buildUrl + "/EX3WEB.data.br",
-        frameworkUrl: buildUrl + "/EX3WEB.framework.js.br",
-        codeUrl: buildUrl + "/EX3WEB.wasm.br",
+        dataUrl: buildUrl + "/web3.data.br",
+        frameworkUrl: buildUrl + "/web3.framework.js.br",
+        codeUrl: buildUrl + "/web3.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "EX2",
