--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/web3.loader.js";
       var config = {
-        dataUrl: buildUrl + "/web3.data.br",
-        frameworkUrl: buildUrl + "/web3.framework.js.br",
-        codeUrl: buildUrl + "/web3.wasm.br",
+        dataUrl: buildUrl + "/web3.data.gz",
+        frameworkUrl: buildUrl + "/web3.framework.js.gz",
+        codeUrl: buildUrl + "/web3.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "EX2",
